--- a/templates/env_secrets.j2
+++ b/templates/env_secrets.j2
@@ -1,19 +1,21 @@
 export SECRET_KEY="{{ django_secret_key }}"
 export DATABASE_URL="{{ database_url }}"
-export STATIC_ROOT="/var/opt/wsgi/amphora/static/"
-export MEDIA_ROOT="{{ amphora_media_root }}"
-export BASE_URL="/amphora/"
+export STATIC_ROOT="/var/opt/wsgi/vogon-web/static/"
+export MEDIA_ROOT="/var/opt/wsgi/vogon-web/media/"
+export BASE_URL="/vogon/"
 export SOCIAL_AUTH_GITHUB_KEY="{{ django_github_key }}"
 export SOCIAL_AUTH_GITHUB_SECRET="{{ django_github_secret }}"
 export BACKEND="postgres"
-export GILES_APP_TOKEN="{{ giles_app_token }}"
 export GOAT="https://amphora.asu.edu/goat"
-export NAMESPACE="http://amphora.asu.edu/amphora/"
+export NAMESPACE="http://amphora.asu.edu/vogon/"
 export GILES="{{ giles_path }}"
+export GILES_APP_TOKEN="{{ giles_app_token }}"
 
 export QUADRIGA_USERID={{ quadriga_user }}
 export QUADRIGA_PASSWORD={{ quadriga_password }}
-export QUADRIGA_ENDPOINT={{ qudariga_endpoint}}
+export QUADRIGA_ENDPOINT={{ quadriga_endpoint }}
 export GOAT_APP_TOKEN={{ goat_app_token }}
-export AWS_ACCESS_KEY={{ aws_access_key }}
-export AWS_SECRET_KEY={{ aws_secret_key }}
+
+export CONCEPTPOWER_ENDPOINT={{ conceptpower_endpoint }}
+export CONCEPTPOWER_USERID={{ conceptpower_userid }}
+export CONCEPTPOWER_PASSWORD={{ conceptpower_password }}
